--- a/main.html
+++ b/main.html
@@ -1,16 +1,41 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <title>Semantic Navbar & Audios</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+  <nav>
+    <ul>
+      <li><a href="https://course.acciojob.com/">Acciojobs</a></li>
+      <li><a href="https://itssriramhere.netlify.app/">About</a></li>
+      <li><a href="https://www.linkedin.com/">Contact</a></li>
+    </ul>
+  </nav>
+
+ 
+  <section>
+    <h2>3 random audios</h2>
+
+    <audio controls>
+      <source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mp3">
+ 
+    </audio>
+    <br><br>
+
+    <audio controls>
+      <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
+    
+    </audio>
+    <br><br>
+
+    <audio controls>
+      <source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mp3">
+   
+    </audio>
+
+  </section>
 
 </body>
-
 </html>
