--- a/main.html
+++ b/main.html
@@ -6,33 +6,33 @@
 </head>
 <body>
 
+  <!-- ✅ Navigation Bar -->
   <nav>
     <ul>
-      <li><a href="https://course.acciojob.com/">Acciojobs</a></li>
+      <li><a href="https://www.linkedin.com/">Home</a></li>
       <li><a href="https://itssriramhere.netlify.app/">About</a></li>
-      <li><a href="https://www.linkedin.com/">Contact</a></li>
+      <li><a href="https://course.acciojob.com/">Contact</a></li>
     </ul>
   </nav>
 
- 
   <section>
     <h2>3 random audios</h2>
 
     <audio controls>
       <source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mp3">
- 
+      Your browser does not support the audio element.
     </audio>
     <br><br>
 
     <audio controls>
       <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
-    
+      Your browser does not support the audio element.
     </audio>
     <br><br>
 
     <audio controls>
       <source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mp3">
-   
+      Your browser does not support the audio element.
     </audio>
 
   </section>
