--- a/main.html
+++ b/main.html
@@ -3,17 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <title>Semantic Navbar & Audios</title>
+	<link rel="stylesheet" href="style.css">
+
 </head>
 <body>
 
   <!-- ✅ Navigation Bar -->
   <nav>
     <ul>
-      <li><a href="https://www.linkedin.com/">Home</a></li>
+      <li><a href="https://course.acciojob.com/">Home</a></li>
       <li><a href="https://itssriramhere.netlify.app/">About</a></li>
-      <li><a href="https://course.acciojob.com/">Contact</a></li>
+      <li><a href="https://example.com/contact">Contact</a></li>
     </ul>
   </nav>
+
 
   <section>
     <h2>3 random audios</h2>
@@ -24,12 +27,14 @@
     </audio>
     <br><br>
 
+   
     <audio controls>
       <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
       Your browser does not support the audio element.
     </audio>
     <br><br>
 
+  
     <audio controls>
       <source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mp3">
       Your browser does not support the audio element.
