--- a/main.html
+++ b/main.html
@@ -7,40 +7,34 @@
 
 </head>
 <body>
-
-  <!-- ✅ Navigation Bar -->
-  <nav>
-    <ul>
-      <li><a href="https://course.acciojob.com/">Home</a></li>
-      <li><a href="https://itssriramhere.netlify.app/">About</a></li>
-      <li><a href="https://example.com/contact">Contact</a></li>
-    </ul>
-  </nav>
-
-
-  <section>
-    <h2>3 random audios</h2>
-
-    <audio controls>
-      <source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mp3">
-      Your browser does not support the audio element.
-    </audio>
-    <br><br>
-
-   
-    <audio controls>
-      <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
-      Your browser does not support the audio element.
-    </audio>
-    <br><br>
+	 <nav>
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#blog">Blog</a></li>
+        </ul>
+    </nav>
 
   
-    <audio controls>
-      <source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mp3">
-      Your browser does not support the audio element.
-    </audio>
+    <div class="audio-section">
+        <h2>3 Random Audios</h2>
+        <div class="audio-container">
+            <audio controls>
+                <source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mpeg">
+                Your browser does not support the audio element.
+            </audio>
+            <audio controls>
+                <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
+                Your browser does not support the audio element.
+            </audio>
+            <audio controls>
+                <source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mpeg">
+                Your browser does not support the audio element.
+            </audio>
+        </div>
+    </div>
 
-  </section>
+ 
 
 </body>
 </html>
