--- a/main.html
+++ b/main.html
@@ -7,34 +7,38 @@
 
 </head>
 <body>
-	 <nav>
+	<nav>
         <ul>
             <li><a href="#home">Home</a></li>
-            <li><a href="#services">Services</a></li>
-            <li><a href="#blog">Blog</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
 
-  
     <div class="audio-section">
         <h2>3 Random Audios</h2>
-        <div class="audio-container">
+        <div class="audio-item">
+            <p>Audio Track 1</p>
             <audio controls>
-                <source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mpeg">
+                <source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mp3">
                 Your browser does not support the audio element.
             </audio>
+        </div>
+        <div class="audio-item">
+            <p>Audio Track 2</p>
             <audio controls>
                 <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
                 Your browser does not support the audio element.
             </audio>
+        </div>
+        <div class="audio-item">
+            <p>Audio Track 3</p>
             <audio controls>
-                <source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mpeg">
+                <source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mp3">
                 Your browser does not support the audio element.
             </audio>
         </div>
     </div>
-
- 
 
 </body>
 </html>
