--- a/main.html
+++ b/main.html
@@ -1,44 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
   <meta charset="UTF-8">
-  <title>Semantic Navbar & Audios</title>
-	<link rel="stylesheet" href="style.css">
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>3 random audios</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-	<nav>
-        <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-    </nav>
+  <nav>
 
-    <div class="audio-section">
-        <h2>3 Random Audios</h2>
-        <div class="audio-item">
-            <p>Audio Track 1</p>
-            <audio controls>
-                <source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mp3">
-                Your browser does not support the audio element.
-            </audio>
-        </div>
-        <div class="audio-item">
-            <p>Audio Track 2</p>
-            <audio controls>
-                <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
-                Your browser does not support the audio element.
-            </audio>
-        </div>
-        <div class="audio-item">
-            <p>Audio Track 3</p>
-            <audio controls>
-                <source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mp3">
-                Your browser does not support the audio element.
-            </audio>
-        </div>
-    </div>
+		<ul>
 
+			<li><a href="https://www.instagram.com/">Instagram</a></li>
+
+		<li><a href="https://course.acciojob.com/">AccioJob</a></li>
+
+		<li><a href="https://www.facebook.com/">Facebook</a></li>
+
+		</ul>
+
+	</nav>
+
+	<h1>3 random audios</h1>
+
+	<audio controls src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3">	
+
+	</audio>
+
+	<audio controls src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg">
+
+	</audio>
+
+	<audio controls src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3">
+
+	</audio>
 </body>
 </html>
